# polaris-data-clients

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: contract-versioning.md
examples/typescript/: depth-paid.ts  liquidity-book-sol-usdc.ts  paid-subscribe.ts  quote-surface-paid.ts  swaps-sol-usdc.ts
proto/: README.md
proto/polaris/data_gateway/v1/: data_gateway.proto
rust/: Cargo.toml  build.rs
rust/examples/: grpc-subscribe-liquidity-book.rs  grpc-subscribe-swaps.rs  ws-liquidity-book.rs  ws-paid.rs  ws-swaps.rs
rust/src/: grpc.rs  lib.rs  ws.rs
scripts/: check-proto-sync.sh  sync-proto-from-obsidian.sh  validate-public-proto.py
typescript/: package.json  pnpm-lock.yaml  tsconfig.examples.json
typescript/src/: index.ts  types.ts  ws.ts
