[package]
name = "polaris-data-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "polaris_data_client"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
url = "2"

[build-dependencies]
tonic-build = "0.12"
